--- a/BERT_RE/requirements.txt
+++ b/BERT_RE/requirements.txt
@@ -1,2 +1,14 @@
-torch==1.6.0
-transformers==3.3.1
+torch>=1.6.0
+transformers>=3.3.1
+numpy>=1.19.0
+pandas>=1.1.0
+scikit-learn>=0.23.0
+matplotlib>=3.3.0
+seaborn>=0.11.0
+tqdm>=4.48.0
+openpyxl>=3.0.5
+datasets>=1.5.0
+pathlib>=1.0.1
+xlsxwriter>=1.3.7
+tensorboardX>=2.1
+nltk>=3.5
